--- a/template2/page.html
+++ b/template2/page.html
@@ -13,7 +13,9 @@
             <img src="media/images/logo2.png">    
         <br />
         <br />
-        <div class="line"></div>
+        <div class="line">
+            <span>z</span>
+        </div>
         <br />
     
         <nav>
